--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
   text-decoration: none;
   font-size: 18px;
   padding: 14px 16px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .topnav a:hover {
