--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@
   padding: 14px 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
+.topnav a.Main {
+  background-color: #c80000;
+}
 
 .topnav a:hover {
   background-color: #d8d8d8;
